--- a/IdealKarkas.WinForms/packages.config
+++ b/IdealKarkas.WinForms/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1004" targetFramework="net472" />
   <package id="runtime.any.System.Diagnostics.Tools" version="4.3.0" targetFramework="net472" />
 </packages>
