--- a/IdealKarkas.WinForms/IdealKarkas.WinForms.csproj
+++ b/IdealKarkas.WinForms/IdealKarkas.WinForms.csproj
@@ -150,6 +150,7 @@
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SecurePasswordHasher.cs" />
     <Compile Include="UserControls\ViewInfo.cs">
       <SubType>UserControl</SubType>
     </Compile>
